@@ -1,6 +1,6 @@
 Package: universalmotif
 Title: Import, Modify, and Export Motifs with R
-Version: 1.7.21
+Version: 1.7.22
 Authors@R: c(
       person(c("Benjamin", "Jean-Marie"), "Tremblay", role = c("aut", "cre"),
         email = "b2tremblay@uwaterloo.ca",
@@ -18,10 +18,10 @@ Description: Allows for importing most common motif types into R for use by
 Depends: R (>= 3.5.0)
 License: GPL-3
 Encoding: UTF-8
-Imports: methods, stats, utils, MASS, ggplot2, ape, ggtree, ggseqlogo, yaml,
-    Rcpp, Rdpack (>= 0.7), Biostrings, BiocGenerics, processx, S4Vectors, rlang
+Imports: methods, stats, utils, MASS, ggplot2, ggseqlogo, yaml,
+    Rcpp, Rdpack (>= 0.7), Biostrings, BiocGenerics, S4Vectors, rlang
 Suggests: spelling, knitr, bookdown, TFBSTools, rmarkdown, MotifDb, testthat,
-    Logolas, BiocParallel, seqLogo, motifStack, dplyr
+    Logolas, BiocParallel, seqLogo, motifStack, dplyr, ape, ggtree, processx
 Enhances: MotIV, PWMEnrich, rGADEM, motifRG
 LinkingTo: Rcpp, RcppThread
 RdMacros: Rdpack
