@@ -122,7 +122,6 @@ importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,Rle)
 importFrom(S4Vectors,safeExplode)
 importFrom(S4Vectors,wmsg)
-importFrom(ape,as.phylo)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,facet_wrap)
@@ -139,12 +138,6 @@ importFrom(ggplot2,ylim)
 importFrom(ggseqlogo,geom_logo)
 importFrom(ggseqlogo,ggseqlogo)
 importFrom(ggseqlogo,theme_logo)
-importFrom(ggtree,"%<+%")
-importFrom(ggtree,geom_tiplab)
-importFrom(ggtree,geom_tiplab2)
-importFrom(ggtree,geom_tippoint)
-importFrom(ggtree,ggtree)
-importFrom(ggtree,groupOTU)
 importFrom(methods,"slot<-")
 importFrom(methods,as)
 importFrom(methods,getClass)
@@ -152,7 +145,6 @@ importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(methods,validObject)
-importFrom(processx,run)
 importFrom(rlang,.data)
 importFrom(stats,as.dist)
 importFrom(stats,chisq.test)
