@@ -11,8 +11,6 @@
 #' @importFrom ggplot2 aes element_blank facet_wrap ggplot theme ylab xlab
 #' @importFrom ggplot2 geom_line geom_point geom_hline geom_text theme_bw ylim
 #' @importFrom ggseqlogo ggseqlogo geom_logo theme_logo
-#' @importFrom ggtree ggtree geom_tiplab geom_tiplab2 groupOTU %<+%
-#' @importFrom ggtree geom_tippoint
 #' @importFrom rlang .data
 #' @importFrom stats as.dist hclust runif rnorm chisq.test fisher.test sd fft
 #' @importFrom stats p.adjust shapiro.test t.test wilcox.test pnorm quantile
@@ -26,10 +24,8 @@
 #' @importFrom Biostrings oligonucleotideTransitions trinucleotideFrequency
 #' @importFrom Biostrings dinucleotideFrequency oligonucleotideFrequency
 #' @importFrom Biostrings reverseComplement writeXStringSet seqtype AA_ALPHABET
-#' @importFrom ape as.phylo
 #' @importFrom Rdpack reprompt
 #' @importFrom Rcpp sourceCpp
-#' @importFrom processx run
 #' @importFrom BiocGenerics cbind rownames colnames ncol nrow rowSums
 #' @importFrom BiocGenerics colMeans rowMeans normalize subset colSums
 #' @importFrom BiocGenerics as.data.frame
